Add JSpecify annotations; replace custom Log Manager with Log4J2 annotations; various Sonar cleanups